--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
@@ -38,9 +38,9 @@
           </ion-input>
           </ion-item>
           <div class="error-message" *ngIf="descripcionPModel.invalid && (descripcionPModel.dirty || descripcionPModel.touched)">
-            <p *ngIf="descripcionPModel.errors?.['required']">La descripcion del producto es obligatorio.</p>
-            <p *ngIf="descripcionPModel.errors?.['minlength']">La descripcion debe tener al menos 3 caracteres.</p>
-            <p *ngIf="descripcionPModel.errors?.['maxlength']">La descripcion no debe exceder los 15 caracteres.</p>
+            <p *ngIf="descripcionPModel.errors?.['required']">La descripción del producto es obligatorio.</p>
+            <p *ngIf="descripcionPModel.errors?.['minlength']">La descripción debe tener al menos 3 caracteres.</p>
+            <p *ngIf="descripcionPModel.errors?.['maxlength']">La descripción no debe exceder los 15 caracteres.</p>
           </div>
 
           <ion-item>
@@ -58,8 +58,8 @@
               <ion-select-option>Reloj digital</ion-select-option>
               <ion-select-option>Reloj analógico</ion-select-option>
               <ion-select-option>Reloj Smartwatch</ion-select-option>
-              <ion-select-option>Audifono bluetooth</ion-select-option>
-              <ion-select-option>Audifono gamer</ion-select-option>
+              <ion-select-option>Audífono bluetooth</ion-select-option>
+              <ion-select-option>Audífono gamer</ion-select-option>
             </ion-select>
           </ion-item>
           <div class="error-message"
