--- a/src/app/pages/categoria/audigamer/audigamer.page.html
+++ b/src/app/pages/categoria/audigamer/audigamer.page.html
@@ -13,7 +13,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>rojos con negro</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>rojos con negro</ion-card-title>
             <ion-card-content>
               <p>$50.000</p>
             </ion-card-content>
@@ -25,7 +25,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>negro con naranja</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>negro con naranja</ion-card-title>
             <ion-card-content>
               <p>$44.000</p>
             </ion-card-content>
@@ -37,7 +37,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag5.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>lila con blanco</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>lila con blanco</ion-card-title>
             <ion-card-content>
               <p>$139.000</p>
             </ion-card-content>
