--- a/src/app/pages/categoria/audiina/audiina.page.html
+++ b/src/app/pages/categoria/audiina/audiina.page.html
@@ -12,7 +12,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>morados</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
             <ion-card-content>
               <p>$39.990</p>
             </ion-card-content>
@@ -24,7 +24,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>azules</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
             <ion-card-content>
               <p>$42.000</p>
             </ion-card-content>
@@ -36,7 +36,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>verdes</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
             <ion-card-content>
               <p>$269.000</p>
             </ion-card-content>
