--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -7,7 +7,7 @@
       <ion-card class="custom-card">
         <img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="" class="card-image">
         <ion-card-content class="card-content">
-          <ion-card-title class="titulo">Audifonos gamers rojos con negro</ion-card-title>
+          <ion-card-title class="titulo">Audífonos gamers rojos con negro</ion-card-title>
           <br>
           <p class="subti" style="font-size: 25px;">Precio: $30.000</p>
           <p class="subti">Descripción:</p>
