--- a/src/app/pages/productos/ag5/ag5.page.html
+++ b/src/app/pages/productos/ag5/ag5.page.html
@@ -7,7 +7,7 @@
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS GAMERS/ag5.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Audifonos gamers lila con blanco</ion-card-title>
+        <ion-card-title class="titulo">Audífonos gamers lila con blanco</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $25.000</p>
         <p class="subti">Descripción:</p>
