--- a/src/app/pages/productos/ai4/ai4.page.html
+++ b/src/app/pages/productos/ai4/ai4.page.html
@@ -7,7 +7,7 @@
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Audifonos Bluetooth azules</ion-card-title>
+        <ion-card-title class="titulo">Audífonos Bluetooth azules</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $46.550</p>
         <br>
