--- a/src/app/pages/productos/ai6/ai6.page.html
+++ b/src/app/pages/productos/ai6/ai6.page.html
@@ -8,7 +8,7 @@
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Audifonos Bluetooth verde</ion-card-title>
+        <ion-card-title class="titulo">Audífonos Bluetooth verde</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $54.000</p>
         <br>
