--- a/src/app/pages/productos/ag4/ag4.page.html
+++ b/src/app/pages/productos/ag4/ag4.page.html
@@ -8,7 +8,7 @@
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Audifonos gamers negro con naranja</ion-card-title>
+        <ion-card-title class="titulo">Audífonos gamers negro con naranja</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
         <p class="subti">Descripción:</p>
