--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -26,14 +26,14 @@
   <ion-grid>
     <ion-card-title>TimeTech Audible</ion-card-title>
     <br>
-    <ion-card-title>Audifonos Gamers</ion-card-title>
+    <ion-card-title>Audífonos Gamers</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <p [routerLink]="['/ag3']">
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>rojos con negro</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>rojos con negro</ion-card-title>
             <ion-card-content>
               <td >{{dinero | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
@@ -46,7 +46,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>negro con anaranjado</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>negro con anaranjado</ion-card-title>
             <ion-card-content>
               <td >{{dinero2 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
@@ -58,7 +58,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS GAMERS/ag5.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos gamers<br>lila con blanco</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos gamers<br>lila con blanco</ion-card-title>
             <ion-card-content>
               <td >{{dinero3 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
@@ -68,14 +68,14 @@
     </ion-row>
   </ion-grid>
   <ion-grid>
-    <ion-card-title>Audifonos Inalámbricos</ion-card-title>
+    <ion-card-title>Audífonos Inalámbricos</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <p [routerLink]="['/ai1']">
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>morados</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
             <ion-card-content>
               <td >{{dinero4 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
@@ -87,7 +87,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>azules</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
             <ion-card-content>
               <td >{{dinero5 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
@@ -99,7 +99,7 @@
         <ion-card>
           <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
-            <ion-card-title class="ion-title">Audifonos Bluetooth<br>verdes</ion-card-title>
+            <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
             <ion-card-content>
               <td >{{dinero6 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
