--- a/src/app/pages/categoria/audigamer/audigamer.page.html
+++ b/src/app/pages/categoria/audigamer/audigamer.page.html
@@ -6,7 +6,7 @@
 <ion-content [fullscreen]="true">
 
   <ion-grid>
-    <ion-card-title>Audifonos Gamers</ion-card-title>
+    <ion-card-title>Audífonos Gamers</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <p [routerLink]="['/ag3']">
