--- a/src/app/pages/categoria/audiina/audiina.page.html
+++ b/src/app/pages/categoria/audiina/audiina.page.html
@@ -5,7 +5,7 @@
 <ion-content [fullscreen]="true">
 
   <ion-grid>
-    <ion-card-title>Audifonos Inalámbricos</ion-card-title>
+    <ion-card-title>Audífonos Inalámbricos</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <p [routerLink]="['/ai1']">
