--- a/src/app/components/componente1/componente1.component.html
+++ b/src/app/components/componente1/componente1.component.html
@@ -1,21 +1,21 @@
 <ion-toolbar>
   <!--BOTON PARA ATRAS-->
     
-<ion-back-button  default-href="#" slot="start"></ion-back-button>
+<ion-back-button style="color: white;"  default-href="#" slot="start"></ion-back-button>
   <!--LOGO DEL CARRITO-->
   <div class="demo-section" slot="end">
-    <mat-icon matBadge="0" matBadgeColor="primary" [routerLink]="['/carrito']"><ion-icon style="width: 30px; height: 30px; margin-right: 80px;" name="cart-outline"></ion-icon></mat-icon>
+    <mat-icon matBadge="0" matBadgeColor="primary" [routerLink]="['/carrito']"><ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: white;" name="cart-outline"></ion-icon></mat-icon>
   </div>
   <!--Menu de la busqueda-->
   <ion-buttons slot="start">
-    <ion-menu-button></ion-menu-button>
+    <ion-menu-button style="color: white;"></ion-menu-button>
   </ion-buttons>
   <!--El buscador-->
   <div class="search-container">
-    <ion-searchbar class="center-search" animated="true" placeholder="Buscar"></ion-searchbar>
+    <ion-searchbar style="color: white;" class="center-search" animated="true" placeholder="Buscar"></ion-searchbar>
   </div>
   <!--este es el menu del usuario-->
-  <ion-chip id="popover-button" slot="end" size="90px">
+  <ion-chip id="popover-button" slot="end" size="90px" style="background-color: #817d7d;">
     <ion-avatar>
       <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
     </ion-avatar>
