--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,6 +30,7 @@
 
 /* Estilos del título de la tarjeta */
 ion-card-title {
+  color: white;
   font-size: 65px;
   font-family: 'Abril Fatface', cursive;
 }
