--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
@@ -4,16 +4,16 @@
 
 <ion-content class="fondo" [fullscreen]="true">
   <div class="container">
-    <ion-card>
+    <ion-card style="background-color: #222222;">
       
       <ion-card-header>
         <ion-card-title>Recuperar Contraseña</ion-card-title>
       </ion-card-header>
       <br>
-      <ion-card-content>
+      <ion-card-content style="background-color: #222222;">
         <form id="registration-form">
           <!--Aqui tendriamos que mostrar la pregunta de seguridad que el usuario registro-->
-          <ion-list>
+          <ion-list style="background-color: #222222;">
             <ion-item>
               <ion-select aria-label="Fruit" interface="popover" placeholder="Pregunta de seguridad" name="preguntaU"
                 requeride>
@@ -23,17 +23,17 @@
             </ion-item>
           </ion-list>
 
-          <ion-item>
+          <ion-item style="background-color: #222222;">
             <ion-label position="floating">Respuesta</ion-label>
             <ion-input type="text" name="respuesta" required></ion-input>
           </ion-item>
 
-          <ion-item>
+          <ion-item style="background-color: #222222;">
             <ion-label position="floating">Nueva contraseña:</ion-label>
             <ion-input type="nContrasena" name="nContrasena" required></ion-input>
           </ion-item>
 
-          <ion-item>
+          <ion-item style="background-color: #222222;">
             <ion-label position="floating">Repetir contraseña:</ion-label>
             <ion-input type="rContrasena" name="rContrasena" required></ion-input>
           </ion-item>
