--- a/src/app/pages/inicio/registro/registro.page.scss
+++ b/src/app/pages/inicio/registro/registro.page.scss
@@ -30,6 +30,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+    background-color: #222222;
   }
   
   /* Estilo para los mensajes de error */
@@ -46,9 +47,11 @@
     --border-radius: 8px;
     line-height: 2.5; /* Ajusta el valor según tus preferencias */
     margin-bottom: 15px;
+    background-color: #222222;
     
   }
   ion-card-title{
+    color: white;
     text-align: center;
     font-size: 60px;
   }
@@ -69,3 +72,4 @@
     font-size: 40px;
   }
 }
+
