--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -38,8 +38,8 @@
 
             <!--RUT-->
             <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" placeholder="28.999.777-8"
-              name="rutU" minlength="11" maxlength="12" required (keydown)="espacioContra($event);validarut($event)" [(ngModel)]="rutUValue"
-              #rutUInput="ngModel"></ion-input>
+              name="rutU" minlength="11" maxlength="12" required (keydown)="espacioContra($event);validarut($event)"
+              [(ngModel)]="rutUValue" #rutUInput="ngModel"></ion-input>
             <!--VALIDACION-->
             <div class="error-message" *ngIf="rutUInput.invalid && (rutUInput.dirty || rutUInput.touched)">
               <p *ngIf="rutUInput.errors?.['required']">Debe ingresar un RUT.</p>
@@ -49,21 +49,21 @@
             <!--CORREO-->
             <div class="input-row">
               <ion-input label="Correo electrónico:" type="email" label-placement="floating" fill="outline"
-                placeholder="ayuda@gmail.com" required (keydown)="espacioContra($event)" [(ngModel)]="email" name="email"
-                #emailInput="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
+                placeholder="ayuda@gmail.com" required (keydown)="espacioContra($event)" [(ngModel)]="email"
+                name="email" #emailInput="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
             </div>
             <!--VALIDACION-->
             <ion-note class="error-message" *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)">
               correo no valido y no puede estar vacío
             </ion-note>
-          
+
 
 
             <!--CLAVE-->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="******" required [(ngModel)]="password" name="password" #passwordInput="ngModel"
               minlength="3" maxlength="15" (keydown)="espacioContra($event)"
-              pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&.,-_*).{3,15}$"></ion-input>
+              pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&.,\-_*]).{3,15}$"></ion-input>
             <!--VALIDACION-->
             <div class="error-message" *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
               <p *ngIf="passwordInput.errors?.['required']">La contraseña es requerida.</p>
@@ -72,6 +72,8 @@
               <p *ngIf="passwordInput.errors?.['pattern']">La contraseña debe contener al menos un número y un carácter
                 especial.</p>
             </div>
+
+
             <!--#########################################################################################################-->
 
             <!--R CLAVE-->
@@ -85,6 +87,7 @@
                 contraseña.</p>
               <p *ngIf="!validatePasswordMatch()">Las contraseñas no coinciden.</p>
             </div>
+
 
             <!--PREGUNTA-->
             <ion-list>
@@ -115,11 +118,11 @@
             </div>
 
             <!--BOTON-->
-            <ion-button color="dark" class="center-buttons" 
-            [disabled]=" !nombreUModel.valid || !apellidoUModel.valid || !preguntaUModel.valid ||
-                         !respuestaUModel.valid || !passwordInput.valid || !confirmPasswordInput.valid"
-            (click)="irAPaginaSiguiente()">Registrarse</ion-button>
-            <p1 [routerLink]="['/inicio-sesion']" style="text-align: center;"> ¿Ya tienes una cuenta? Inicia sesión aquí</p1><br>
+            <ion-button color="dark" class="center-buttons" [disabled]="!nombreUModel.valid || !apellidoUModel.valid || !preguntaUModel.valid ||
+                         !respuestaUModel.valid || !passwordInput.valid || !confirmPasswordInput.valid || !validatePasswordMatch()"
+              (click)="irAPaginaSiguiente()">Registrarse</ion-button>
+            <p1 [routerLink]="['/inicio-sesion']" style="text-align: center;"> ¿Ya tienes una cuenta? Inicia sesión aquí
+            </p1><br>
           </form>
         </ion-card-content>
       </ion-card>
