--- a/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
+++ b/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
@@ -50,11 +50,13 @@
           <ion-item>
             <ion-label position="floating">Precio:</ion-label>
             <ion-input type="number" name="precioP" min="1000" required [(ngModel)]="precioPValue"
-            #precioPModel="ngModel"></ion-input>
+              #precioPModel="ngModel" (input)="validatePrecio(precioPValue)"></ion-input>
           </ion-item>
-          <div class="error-message" *ngIf="precioPModel.invalid && (precioPModel.dirty || precioPModel.touched)">
+          <div class="error-message" *ngIf="!precioPModel.valid && (precioPModel.dirty || precioPModel.touched)">
             <p *ngIf="precioPModel.errors?.['required']">El precio del producto es obligatorio.</p>
+            <p *ngIf="precioPModel.errors?.['firstDigitNotZero']">El primer dígito no puede ser 0.</p>
           </div>
+          
 
           <ion-item>
             <ion-label position="floating">Categoría para el producto</ion-label>
